allow CORS for calendar svg

--- a/nginx/templates/default.conf.template
+++ b/nginx/templates/default.conf.template
@@ -1,5 +1,6 @@
 server {
     location /calendar.svg {
+        add_header Access-Control-Allow-Origin *;
         proxy_pass http://calendar-svg/;
     }
 }
