--- a/nginx/templates/default.conf.template
+++ b/nginx/templates/default.conf.template
@@ -26,6 +26,28 @@ server {
         add_header Access-Control-Allow-Origin *;
         proxy_pass http://calendar-svg/;
     }
+
+    location /filebrowser {
+        # prevents 502 bad gateway error
+        proxy_buffers 8 32k;
+        proxy_buffer_size 64k;
+
+        client_max_body_size 75M;
+
+        # redirect all HTTP traffic to filbrowser container;
+        proxy_pass http://filebrowser:8080;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header Host $http_host;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        #proxy_set_header X-NginX-Proxy true;
+
+        # enables WS support
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+
+        proxy_read_timeout 999999999;
+    }
 }
 
 server {
