--- a/nginx/templates/default.conf.template
+++ b/nginx/templates/default.conf.template
@@ -87,18 +87,28 @@ server {
     listen [::]:80;
 
     server_name bitwarden.${NGINX_DOMAIN};
+    server_tokens off;
+
+    location /.well-known/acme-challenge/ {
+        root /var/www/certbot;
+    }
 
     location / {
-        proxy_pass http://localhost:81;
+        proxy_pass http://localnode:81;
     }
 }
 server {
-    listen 443;
-    listen [::]:443;
+    listen 443 ssl;
+    listen [::]:443 ssl;
 
     server_name bitwarden.${NGINX_DOMAIN};
 
+    ssl_certificate /etc/nginx/ssl/live/bitwarden.${NGINX_DOMAIN}/fullchain.pem;
+    ssl_certificate_key /etc/nginx/ssl/live/bitwarden.${NGINX_DOMAIN}/privkey.pem;
+
     location / {
-        proxy_pass http://localhost:444;
+        proxy_pass https://localnode:444;
+        proxy_ssl_trusted_certificate /etc/nginx/sslcerts/bitwarden.pem;
+        proxy_ssl_verify off;
     }
 }
