--- a/nginx/templates/default.conf.template
+++ b/nginx/templates/default.conf.template
@@ -98,13 +98,21 @@ server {
     }
 }
 server {
-    listen 443 ssl;
-    listen [::]:443 ssl;
+    listen 443 ssl http2;
+    listen [::]:443 ssl http2;
 
     server_name bitwarden.${NGINX_DOMAIN};
 
     ssl_certificate /etc/nginx/ssl/live/bitwarden.${NGINX_DOMAIN}/fullchain.pem;
     ssl_certificate_key /etc/nginx/ssl/live/bitwarden.${NGINX_DOMAIN}/privkey.pem;
+    ssl_session_timeout 30m;
+    ssl_session_cache shared:SSL:20m;
+    ssl_session_tickets off;
+
+    ssl_protocols TLSv1.2;
+    ssl_ciphers "ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-SHA384:ECDHE-RSA-AES256-SHA384:ECDHE-ECDSA-AES128-SHA256:ECDHE-RSA-AES128-SHA256";
+    # Enables server-side protection from BEAST attacks
+    ssl_prefer_server_ciphers on;
 
     location / {
         proxy_pass https://localnode:444;
