--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -64,4 +64,15 @@ services:
       - FB_DATABASE=/data/filebrowser.db
       - FB_BASEURL=/filebrowser
     restart: always
-
+  minecraft:
+    image: itzg/minecraft-server
+    ports:
+      - 25565:25565
+    environment:
+      EULA: "TRUE"
+    tty: true
+    stdin_open: true
+    restart: unless-stopped
+    volumes:
+      # attach a directory relative to the directory containing this compose file
+      - ./minecraft-data:/data
